fix loader + footer spacings

--- a/assets/scss/components/footer.scss
+++ b/assets/scss/components/footer.scss
@@ -12,7 +12,7 @@ footer {
   }
 
   @include max(sm) {
-    padding: 4vh 9.133vw;
+    padding: 26vw 9.133vw;
   }
 
   a {
@@ -33,6 +33,8 @@ footer {
     @include max(md) {
       font-size: 2.083vw;
       line-height: 3.906vw;
+      text-align: left;
+      align-items: flex-start;
     }
 
     span {
