--- a/assets/scss/pages/home.scss
+++ b/assets/scss/pages/home.scss
@@ -19,6 +19,10 @@
         padding-bottom: 32.552vw;
       }
 
+      @include max(sm) {
+        padding-bottom: 0;
+      }
+
       &.black {
         background:black;
       }
